OPHYK-761 remove test code utils from production code